# jpp-lista3

./: .gitignore  README.md  test.py
zad1/: CMakeLists.txt
zad1/app/: main.cpp
zad1/inc/: FiniteModField.hpp  FiniteModField.tpp
zad1cpp/: CMakeLists.txt
zad1cpp/inc/: FiniteModField.hpp  FiniteModField.tpp
zad1java/: FiniteModField.java
zad1python/: FiniteModField.py
zad2/: CMakeLists.txt
zad2/app/: main.cpp
zad2/inc/: Polynomial.hpp  Polynomial.tpp
zad3/: Field.java  FiniteModField.java  FloatField.java  Main.java  MainFiniteModField.java  MainPolynomial.java  Polynomial.java
zad4/: FiniteModField.py  Polynomial.py  main.py
zad5/: CMakeLists.txt
zad5/inc/: BinaryField.hpp  HammingCode.hpp  Polynomial.tpp
zad5/src/: BinaryField.cpp
